LPS-102664 | LPS-105732 Add ability to retrieve assignable users to a list of tasks. The result must be grouped by the task id and must have a group that represents the common assignees to that task list
