# modules/apps/headless/headless-admin-workflow/headless-admin-workflow-impl/rest-openapi.yaml
@@ -444,6 +444,21 @@ components:
                     format: int64
                     type: integer
             type: object
+        WorkflowTaskAssignableUsersBag:
+            properties:
+                workflowTaskAssignableUsers:
+                    items:
+                        properties:
+                            assignableUsers:
+                                items:
+                                    $ref: "#/components/schemas/Assignee"
+                                type: array
+                            taskId:
+                                format: int64
+                                type: integer
+                        type: object
+                    type: array
+            type: object
 info:
     description:
         ""
@@ -1100,6 +1115,30 @@ paths:
                     description:
                         ""
             tags: ["WorkflowTask"]
+    "/workflow-tasks/assignable-users-bag":
+        get:
+            operationId: getWorkflowTaskAssignableUsersBag
+            parameters:
+                - in: query
+                  name: workflowTaskIds
+                  required: true
+                  schema:
+                      items:
+                          format: int64
+                          type: integer
+                      type: array
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/WorkflowTaskAssignableUsersBag"
+                        application/xml:
+                            schema:
+                                $ref: "#/components/schemas/WorkflowTaskAssignableUsersBag"
+                    description:
+                        ""
+            tags: ["WorkflowTaskAssignableUsersBag"]
     "/workflow-tasks/assigned-to-me":
         get:
             operationId: getWorkflowTasksAssignedToMePage
